--- a/loans-dev.properties
+++ b/loans-dev.properties
@@ -1,10 +1,10 @@
-loans.msg =Welcome to the EazyBank Loans Dev application
+loans.msg =Welcome to the SimpBank Loans Dev application
 loans.build-version=2
 
-loans.mailDetails.hostName=dev-loans@eazybytes.com
+loans.mailDetails.hostName=dev-loans@tpgitz.com
 loans.mailDetails.port=9021
-loans.mailDetails.from=dev-loans@eazybytes.com
-loans.mailDetails.subject=Your Loan Details from Eazy Bank Dev Environment
+loans.mailDetails.from=dev-loans@tpgitz.com
+loans.mailDetails.subject=Your Loan Details from Simp Bank Dev Environment
 
 loans.activeBranches[0]=Chennai
 loans.activeBranches[1]=Berlin
